[package]
name = "rp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls-pemfile = "1.0.1"
futures-util = "0.3.25"
tokio-rustls = "0.23.4"
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }